<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        app:behavior_draggable="true"
        app:behavior_hideable="true">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/Text05"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tool:text="사건의 지평선" />

        <TextView
            android:id="@+id/tv_song_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textColor="@color/Text03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_song_title"
            app:layout_constraintTop_toBottomOf="@id/tv_song_title"
            tool:text="12345" />

        <ImageView
            android:id="@+id/iv_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:src="@drawable/number_and_singer_divider_background"
            app:layout_constraintBottom_toBottomOf="@id/tv_song_number"
            app:layout_constraintStart_toEndOf="@id/tv_song_number"
            app:layout_constraintTop_toTopOf="@id/tv_song_number" />

        <TextView
            android:id="@+id/tv_song_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/Text03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_divider"
            app:layout_constraintTop_toTopOf="@id/tv_song_number"
            tool:text="윤하" />

        <RelativeLayout
            android:id="@+id/layout_song_gender"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/song_item_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_song_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/gender"
            android:textColor="@color/Text03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/layout_song_gender"
            app:layout_constraintStart_toStartOf="@id/layout_song_gender"
            app:layout_constraintTop_toTopOf="@id/layout_song_gender" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/layout_song_gender"
            app:layout_constraintEnd_toEndOf="@id/layout_song_gender"
            app:layout_constraintTop_toTopOf="@id/layout_song_gender">

            <RadioButton
                android:id="@+id/rb_man"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/gender_radio_button"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/man"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb_woman"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/gender_radio_button"
                android:button="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/woman"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RadioGroup>

        <RelativeLayout
            android:id="@+id/layout_song_key"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/song_item_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_song_gender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/key_control"
            android:textColor="@color/Text03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/layout_song_key"
            app:layout_constraintStart_toStartOf="@id/layout_song_key"
            app:layout_constraintTop_toTopOf="@id/layout_song_key" />

        <ImageView
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="@id/layout_song_key"
            app:layout_constraintEnd_toStartOf="@id/layout_key"
            app:layout_constraintTop_toTopOf="@id/layout_song_key" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_key"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bottom_sheet_key_background"
            app:layout_constraintBottom_toBottomOf="@id/layout_song_key"
            app:layout_constraintEnd_toStartOf="@id/btn_plus"
            app:layout_constraintTop_toTopOf="@id/layout_song_key">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="21dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_song_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_key"
                    android:textColor="@color/black"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_key_up_down_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tool:ignore="SpUsage"
                    tool:text="원키" />

                <ImageView
                    android:id="@+id/iv_key_up_down_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_keyup"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_song_key"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="@id/layout_song_key"
            app:layout_constraintEnd_toEndOf="@id/layout_song_key"
            app:layout_constraintTop_toTopOf="@id/layout_song_key" />

        <RelativeLayout
            android:id="@+id/layout_group"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/song_item_background"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_song_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/group"
            android:textColor="@color/Text03"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/layout_group"
            app:layout_constraintStart_toStartOf="@id/layout_group"
            app:layout_constraintTop_toTopOf="@id/layout_group" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_group_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@id/layout_group"
            app:layout_constraintEnd_toEndOf="@id/layout_group"
            app:layout_constraintTop_toTopOf="@id/layout_group">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_group_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_listgroup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_group_name"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/Fill07" />

            <TextView
                android:id="@+id/tv_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_group_open"
                app:layout_constraintTop_toTopOf="parent"
                tool:ignore="SpUsage"
                tool:text="전체"
                tool:textColor="@color/Fill07" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_group_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_group_open"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/Fill06" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@color/Fill03"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="@id/btn_cancel"
            app:layout_constraintStart_toStartOf="@id/btn_cancel"
            app:layout_constraintTop_toTopOf="@id/btn_cancel" />

        <RelativeLayout
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@color/Fill07"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/Text01"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_save"
            app:layout_constraintEnd_toEndOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="@id/btn_save"
            app:layout_constraintTop_toTopOf="@id/btn_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
